# FastPack

./: .gitignore  Cargo.toml  README.md  cliff.toml
.github/scripts/: package-macos.sh
.github/workflows/: ci.yml  publish.yml  release.yml
crates/fastpack/: Cargo.toml  build.rs
crates/fastpack-compress/: Cargo.toml
crates/fastpack-compress/src/: compressor.rs  error.rs  lib.rs
crates/fastpack-compress/src/backends/: dxt.rs  jpeg.rs  mod.rs  png.rs  webp.rs
crates/fastpack-core/: Cargo.toml
crates/fastpack-core/benches/: packing.rs
crates/fastpack-core/src/: error.rs  lib.rs
crates/fastpack-core/src/algorithms/: basic.rs  grid.rs  maxrects.rs  mod.rs  packer.rs  polygon.rs
crates/fastpack-core/src/imaging/: alias.rs  dither.rs  extrude.rs  loader.rs  mod.rs  pixel_art.rs  premultiply.rs  scale.rs  trim.rs
crates/fastpack-core/src/types/: atlas.rs  config.rs  mod.rs  pixel_format.rs  rect.rs  sprite.rs
crates/fastpack-core/tests/: packing_tests.rs
crates/fastpack-formats/: Cargo.toml
crates/fastpack-formats/src/: error.rs  exporter.rs  lib.rs
crates/fastpack-formats/src/formats/: json_array.rs  json_hash.rs  mod.rs  phaser3.rs  pixijs.rs
crates/fastpack-formats/tests/: format_tests.rs
crates/fastpack-gui/: Cargo.toml  build.rs
crates/fastpack-gui/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  zh.json
crates/fastpack-gui/src/: app.rs  lib.rs  menu.rs  preferences.rs  state.rs  theme.rs  toolbar.rs  updater.rs  worker.rs
crates/fastpack-gui/src/panels/: anim_preview.rs  atlas_preview.rs  mod.rs  output_log.rs  prefs_window.rs  settings.rs  sprite_list.rs
crates/fastpack-gui/src/widgets/: color_rect.rs  mod.rs  nine_patch_editor.rs  pivot_editor.rs
crates/fastpack-tauri/: biome.json  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/fastpack-tauri/src/: App.module.css  App.tsx  i18n.ts  index.css  main.tsx  store.ts  types.ts
crates/fastpack-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/fastpack-tauri/src-tauri/capabilities/: default.json
crates/fastpack-tauri/src-tauri/icons/: icon.icns
crates/fastpack-tauri/src-tauri/src/: lib.rs  main.rs  menu.rs  preferences.rs  state.rs  updater.rs  worker.rs
crates/fastpack-tauri/src-tauri/src/commands/: cli.rs  dialogs.rs  mod.rs  pack.rs  preferences.rs  project.rs  updater.rs
crates/fastpack-tauri/src/components/: AnimPreview.tsx  AtlasPreview.module.css  AtlasPreview.tsx  DefaultsTab.tsx  IconButton.tsx  MenuBar.module.css  MenuBar.tsx  OutputLog.module.css  OutputLog.tsx  PanelHeader.tsx  PreferencesDialog.module.css  PreferencesDialog.tsx  Section.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SpriteList.module.css  SpriteList.tsx  StatusBar.tsx  Toolbar.module.css  Toolbar.tsx  UpdatesTab.tsx
crates/fastpack-tauri/src/components/anim-preview/: AnimControls.tsx
crates/fastpack-tauri/src/components/settings/: LayoutSection.tsx  OutputSection.tsx  SpriteSection.tsx  VariantSection.tsx
crates/fastpack-tauri/src/components/sprite-list/: FileRow.tsx  FolderRow.tsx  SourceRow.tsx  index.tsx
crates/fastpack-tauri/src/components/ui/: input-group.tsx
crates/fastpack-tauri/src/hooks/: useAnimPlayback.ts  useAppInit.ts  useAtlasCanvas.ts  useDraggable.ts  useDrop.ts  useFrameSelection.ts  useKeybindCapture.ts  useKeyboardShortcuts.ts  useLayoutPersistence.ts  useMenuEvents.ts  usePack.ts  usePublish.ts  useResizable.ts  useTreeNav.ts
crates/fastpack-tauri/src/hooks/atlas/: constants.ts  hitTest.ts  interaction.ts  layout.ts  scene.ts  textures.ts  zoom.ts
crates/fastpack-tauri/src/lib/: commands.ts  defaults.ts  folder-colors.ts  keybinds.ts  time.ts  tree.ts  utils.ts
crates/fastpack-tauri/src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  zh.json
crates/fastpack-tui/: Cargo.toml
crates/fastpack-tui/src/: lib.rs
crates/fastpack-tui/src/panels/: mod.rs
crates/fastpack/src/: cli.rs  main.rs  pipeline.rs  progress.rs  project.rs  split.rs  watch.rs
crates/fastpack/tests/: cli_tests.rs
crates/fastpack/wix/: License.rtf  main.wxs
docs/: architecture.md  cli.md  gui.md  project-file.md  tauri.md  tui.md
docs/algorithms/: basic.md  grid.md  maxrects.md  polygon.md
docs/compression/: basis-universal.md  hardware-formats.md  png-optimization.md
docs/features/: alias-detection.md  animation-preview.md  extrude.md  i18n.md  keybinds.md  multi-resolution.md  multipack.md  ninepatch.md  normal-maps.md  pivot-points.md  pixel-format.md  preferences.md  premultiply-alpha.md  sprite-splitter.md  trimming.md
docs/formats/: cocos2d.md  css.md  custom-templates.md  godot.md  json-array.md  json-hash.md  libgdx.md  phaser3.md  pixijs.md  unity.md  xml.md
examples/: basic.fpsheet
