[workspace]
resolver = "2"
members = [
    "crates/fastpack-core",
    "crates/fastpack-formats",
    "crates/fastpack-compress",
    "crates/fastpack-gui",
    "crates/fastpack-tui",
    "crates/fastpack",
]

[workspace.package]
version      = "0.21.2"
edition      = "2024"
rust-version = "1.85"
license      = "MIT"
repository   = "https://github.com/Hexeption/FastPack"
homepage     = "https://github.com/Hexeption/FastPack"
keywords     = ["texture-atlas", "sprite-packer", "atlas", "packing", "game"]
categories   = ["game-development", "multimedia::images", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
fastpack-core     = { path = "crates/fastpack-core",     version = "0.21.0" }
fastpack-formats  = { path = "crates/fastpack-formats",  version = "0.21.0" }
fastpack-compress = { path = "crates/fastpack-compress", version = "0.21.0" }
fastpack-gui      = { path = "crates/fastpack-gui",      version = "0.21.0" }
fastpack-tui      = { path = "crates/fastpack-tui",      version = "0.21.0" }

# Error handling
thiserror = "2"
anyhow    = "1"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "bmp", "tga", "webp", "tiff",
] }

# Parallelism
rayon = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
