[package]
name             = "fastpack-core"
description      = "Core packing algorithms and data types for FastPack"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[features]
default = ["svg", "psd"]
svg     = ["dep:resvg"]
psd     = ["dep:psd"]

[dependencies]
thiserror.workspace = true
anyhow.workspace    = true
serde.workspace     = true
image.workspace     = true
rayon.workspace     = true
tracing.workspace   = true

geo        = "0.26"
rustc-hash = "2"

[dependencies.resvg]
version  = "0.43"
optional = true

[dependencies.psd]
version  = "0.3"
optional = true

[dev-dependencies]
tempfile  = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "packing"
harness = false
