[package]
name             = "fastpack-gui"
description      = "Native desktop GUI for FastPack (primary interface)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
fastpack-core.workspace     = true
fastpack-formats.workspace  = true
fastpack-compress.workspace = true
thiserror.workspace         = true
anyhow.workspace            = true
serde.workspace             = true
tracing.workspace           = true
image.workspace             = true
rayon.workspace             = true
serde_json.workspace        = true
walkdir                     = "2"
notify-debouncer-mini       = "0.7"
toml                        = "0.8"
rfd                         = "0.15"
ureq                        = "3"
dirs                        = "6"
rust-i18n                   = "3"

egui        = "0.33"
eframe      = { version = "0.33", features = ["default_fonts", "wgpu"] }
egui_extras = { version = "0.33", features = ["image"] }
egui-phosphor = { version = "0.11", features = ["regular"] }

[build-dependencies]
ico = "0.5"
