[package]
name             = "fastpack"
description      = "FastPack — modern texture atlas packer"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "../../README.md"

[[bin]]
name = "fastpack"
path = "src/main.rs"

[dependencies]
fastpack-core.workspace     = true
fastpack-formats.workspace  = true
fastpack-compress.workspace = true
image.workspace             = true
fastpack-gui.workspace      = true
fastpack-tui.workspace      = true
thiserror.workspace         = true
anyhow.workspace            = true
serde.workspace             = true
serde_json.workspace        = true
rayon.workspace             = true
tracing.workspace           = true
tracing-subscriber.workspace = true
tokio.workspace              = true

clap                  = { version = "4", features = ["derive", "env", "wrap_help", "color"] }
toml                  = "0.8"
toml_edit             = "0.22"
notify                = "7"
notify-debouncer-mini = "0.4"
indicatif             = { version = "0.17", features = ["rayon"] }
console               = "0.15"
glob                  = "0.3"
walkdir               = "2"
humansize             = "2"

[dev-dependencies]
tempfile           = "3"
serde_json.workspace = true
